# sistra

./: Cargo.toml  README.md  config.toml.example  sim_btc.sh  sim_sol.sh
data/: data_btc.json  data_sol.json  get_btc_data.py
examples/: config.toml  kucoin.rs  okx.rs
src/: balance.rs  coin.rs  config.rs  executor.rs  fear_greed.rs  fee.rs  lib.rs  logger.rs  main.rs  order.rs  signal.rs  strategy.rs  telegram.rs
src/cex/: kucoin.rs  mod.rs  okx.rs  simulate.rs
