[package]
name = "sistra"
version = "0.2.0"
edition = "2024"

[lib]
name = "sistra"
path = "src/lib.rs"

[[bin]]
name = "sistra"
path = "src/main.rs"

[profile.release]
codegen-units = 1

[dependencies]
dotenv = "0.15"
anyhow = "1.0.98"
chrono = "0.4.41"
toml = "0.9.2"
log = "0.4.22"
env_logger = "0.11.8"
#pretty_env_logger = "0.5"
clap = { version = "4.5.41", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1.88"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

###

teloxide = { version = "0.17.0", features = ["macros"] }